--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 .idea/modules.xml
 out/production/ch02/Main.class
 out/production/ch02/Swhich.class
+.idea/uiDesigner.xml
+.idea/vcs.xml
+out/production/ch02/IfElse.class
+out/production/ch02/Operator.class
+out/production/ch02/Question.class
+out/production/ch02/Question1.class
